--- a/InventarioApi/InventarioDesktop/InventarioDesktop.csproj
+++ b/InventarioApi/InventarioDesktop/InventarioDesktop.csproj
@@ -9,16 +9,21 @@
     <NoWarn>$(NoWarn);IL2026</NoWarn>
   </PropertyGroup>
 
-<ItemGroup>
-  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
-    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    <PrivateAssets>all</PrivateAssets>
-  </PackageReference>
-  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
-  <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+  </ItemGroup>
 
-</ItemGroup>
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
